--- a/server/package.json
+++ b/server/package.json
@@ -6,29 +6,41 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "init-db": "node db/init.js"
+    "init-db": "node db/init.js",
+    "build": "echo \"Server has no build step\""
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "cors": "^2.8.5",
-    "helmet": "^7.0.0",
-    "morgan": "^1.10.0",
-    "dotenv": "^16.1.4",
-    "pg": "^8.11.0",
+    "axios": "^1.12.2",
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^1.41.3",
+    "cors": "^2.8.5",
+    "crypto": "^1.0.1",
+    "dotenv": "^16.1.4",
+    "express": "^4.18.2",
+    "express-session": "^1.17.3",
+    "helmet": "^7.0.0",
     "jsonwebtoken": "^9.0.1",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.3",
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
-    "express-session": "^1.17.3",
-    "crypto": "^1.0.1",
+    "pg": "^8.11.0",
+    "streamifier": "^0.1.1",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.22"
+    "nodemon": "^3.1.10"
   },
-  "keywords": ["ecommerce", "nodejs", "express", "postgresql"],
+  "keywords": [
+    "ecommerce",
+    "nodejs",
+    "express",
+    "postgresql"
+  ],
   "author": "Kapee Team",
   "license": "MIT"
 }
